Fix regression from moving h3 -> h4 in scrollbar

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -227,7 +227,7 @@ a:active {
 				transition: background-color #{$states-highlighted-in}s ease-out;
 			}
 
-			h3 {
+			h4 {
 				pointer-events: none;
 			}
 		}
